--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "RijsatDatabase": "Data Source=LAPTOP-TV4TO026\\HAOADULOVE;Initial Catalog=RijsatDb;user id = sa;pwd = 12345678; Integrated Security=True"
+    "RijsatDatabase": "Data Source=LAPTOP-TV4TO026\\HAOADULOVE;Initial Catalog=RijsatDb;user id = sa;pwd = 12345678; TrustServerCertificate=True"
   }
 }
